Fix tester Makefile

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -9,20 +9,26 @@ CFLAGS = -Wall -Wextra -Werror -g
 
 INCLUDES = -I../srcs -I../minilibx-linux -I../libft/libft
 
+LDLIBS = -lft -lmlx_Linux -lXext -lX11 -lm
+LDFLAGS = -L../libft/libft -L../minilibx-linux -L/usr/lib
+
 all: $(NAME)
 
 $(NAME): $(OBJS) _miniRT.o
-	$(CC) -o $@ $(CFLAGS) $(OBJS) _miniRT.o $(INCLUDES)
+	$(CC) -o $@ $(CFLAGS) $(OBJS) _miniRT.o $(INCLUDES) $(LDFLAGS) $(LDLIBS)
 
 %.o: %.c
 	$(CC) -o $@ $(CFLAGS) $(INCLUDES) -c $<
 
 _miniRT.o:
 	make -C ..
-	strip -N main ../miniRT _miniRT.o
+	strip -N main ../miniRT.o -o _miniRT.o
+
+run: all
+	./$(NAME)
 
 clean:
-	rm -rf $(OBJS)
+	rm -rf $(OBJS) _miniRT.o
 
 fclean: clean
 	rm -rf $(NAME)
@@ -31,4 +37,4 @@ fclean: clean
 re: fclean all
 	make -C .. fclean
 
-.PHONY: all clean fclean re
+.PHONY: all clean fclean re run
