--- a/miniRT/Makefile
+++ b/miniRT/Makefile
@@ -1,7 +1,7 @@
 NAME = miniRT
 
 SRCDIR = srcs
-SRCS = test.c vector.c quaternion.c matrix.c ray.c light.c shape.c object.c intersections.c world.c hit.c
+SRCS = test.c vector.c quaternion.c matrix.c ray.c light.c shape.c object.c intersections.c world.c hit.c camera.c
 HDRS = laag.h minirt.h
 
 OBJDIR = objs
